create readbook admin and download book

--- a/app/src/main/res/layout/activity_pdf_detail.xml
+++ b/app/src/main/res/layout/activity_pdf_detail.xml
@@ -36,6 +36,7 @@
 
     <!--All content under scrollView-->
     <ScrollView
+        android:layout_above="@id/bookOptionsLL"
         android:layout_below="@+id/toolbarRL"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -215,4 +216,49 @@
         </LinearLayout>
 
     </ScrollView>
+
+    <!-- Layout for button at bottom -->
+    <LinearLayout
+        android:id="@+id/bookOptionsLL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
+        android:padding="16dp"
+        android:background="@color/white">
+
+        <!-- Add your buttons or views here -->
+
+        <!--Button: Open to view pdf-->
+        <Button
+            android:id="@+id/readBookBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_alignParentBottom="true"
+            android:drawableTop="@drawable/ic_book_white"
+            android:text="Read"
+            android:background="@color/design_default_color_primary" />
+
+
+        <!--Button: Open to download pdf-->
+        <Button
+            android:id="@+id/downloadBookBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_alignParentBottom="true"
+            android:drawableTop="@drawable/ic_download_white"
+            android:text="Download"
+            android:background="@color/design_default_color_primary" />
+
+
+
+    </LinearLayout>
+
+
+
+
+
 </RelativeLayout>
