--- a/app/src/main/res/layout/activity_pdf_list_admin.xml
+++ b/app/src/main/res/layout/activity_pdf_list_admin.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back01"
-    tools:context=".PdfListAdminActivity">
+    tools:context=".activities.PdfListAdminActivity">
 <RelativeLayout
     android:id="@+id/toolbarRl"
     android:layout_width="match_parent"
