Add Favorite and Manage Profile

--- a/app/src/main/res/layout/activity_pdf_detail.xml
+++ b/app/src/main/res/layout/activity_pdf_detail.xml
@@ -55,8 +55,8 @@
                 <!--Book preview-->
                 <RelativeLayout
                     android:id="@+id/pdfRl"
-                    android:layout_width="100dp"
-                    android:layout_height="140dp"
+                    android:layout_width="110dp"
+                    android:layout_height="150dp"
                     android:layout_marginEnd="5dp"
                     android:background="@color/gray02">
 
@@ -199,6 +199,28 @@
                             android:text="N/A"/>
 
                     </TableRow>
+
+                    <TableRow
+                        android:layout_marginTop="5dp"
+                        >
+                        <TextView
+                            android:id="@+id/pagesLabelTv"
+                            style="@style/TextAppearance.MaterialComponents.Caption"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:text="Pages"/>
+
+                        <TextView
+                            android:id="@+id/pagesTv"
+                            style="@style/TextAppearance.MaterialComponents.Caption"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_marginEnd="5dp"
+                            android:text="N/A"/>
+
+                    </TableRow>
                 </TableLayout>
 
             </RelativeLayout>
@@ -223,10 +245,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="bottom"
-        android:padding="16dp"
-        android:background="@color/white">
+        android:background="@color/design_default_color_primary"
+        android:layout_alignParentBottom="true">
 
         <!-- Add your buttons or views here -->
 
@@ -234,7 +254,7 @@
         <Button
             android:id="@+id/readBookBtn"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_alignParentBottom="true"
             android:drawableTop="@drawable/ic_book_white"
@@ -246,12 +266,23 @@
         <Button
             android:id="@+id/downloadBookBtn"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_alignParentBottom="true"
             android:drawableTop="@drawable/ic_download_white"
             android:text="Download"
             android:background="@color/design_default_color_primary" />
+
+        <Button
+            android:id="@+id/favoriteBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:drawableTop="@drawable/ic_favorite_boder_white"
+            android:text="Add Favorite"
+            android:background="@color/design_default_color_primary" />
+
+
 
 
 
