--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="gray02">#777777</color>
     <color name="gray03">#EDEDED</color>
     <color name="gray04">#FBFBFB</color>
+    <color name="pink">#FF4081</color>
 
 </resources>
