--- a/app/src/main/res/layout/activity_zalo_payment.xml
+++ b/app/src/main/res/layout/activity_zalo_payment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".activities.MomoPaymentActivity">
+    tools:context=".activities.ZaloPaymentActivity">
 
     <!-- Toolbar -->
     <RelativeLayout
@@ -155,7 +155,7 @@
         android:background="@color/design_default_color_primary">
 
         <Button
-            android:id="@+id/momoPayBtn"
+            android:id="@+id/zaloPayBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
