--- a/app/src/main/res/layout/activity_zalo_payment.xml
+++ b/app/src/main/res/layout/activity_zalo_payment.xml
@@ -141,6 +141,13 @@
                 android:textSize="16sp"
                 android:layout_marginBottom="24dp"/>
 
+<!--            <Button-->
+<!--                android:id="@+id/btnFakeCallback"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Test Callback ZaloPay" />-->
+
+
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
