--- a/app/src/main/res/layout/activity_zalo_payment.xml
+++ b/app/src/main/res/layout/activity_zalo_payment.xml
@@ -120,14 +120,14 @@
                 android:layout_height="wrap_content"
                 android:text="Lượt tải"
                 android:layout_marginBottom="8dp" />
-            <TextView
-                android:id="@+id/statusTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Chưa thanh toán"
-                android:textColor="@color/pink"
-                android:textStyle="italic"
-                android:layout_marginBottom="16dp"/>
+<!--            <TextView-->
+<!--                android:id="@+id/statusTv"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Chưa thanh toán"-->
+<!--                android:textColor="@color/pink"-->
+<!--                android:textStyle="italic"-->
+<!--                android:layout_marginBottom="16dp"/>-->
 
 
             <!-- Giá tải -->
